[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/font-title.tres" type="DynamicFont" id=1]
[ext_resource path="res://themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 389.0
margin_top = 52.0
margin_right = 635.0
margin_bottom = 548.0

[node name="LabelTitle" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 246.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.611765, 0.631373, 0.552941, 1 )
text = "bioBrittle"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 246.0
margin_bottom = 112.0
custom_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 246.0
margin_bottom = 442.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 243.0
margin_bottom = 323.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 300.0
custom_constants/separation = 20

[node name="ButtonNewCampaign" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "New Campaign"

[node name="ButtonContinueCampaign" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 40 )
text = "Continue Campaign"

[node name="ButtonAbandonCampaign" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 200.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 40 )
text = "Abandon Campaign"

[node name="ButtonSettings" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 200.0
margin_bottom = 220.0
rect_min_size = Vector2( 200, 40 )
text = "Settings"

[node name="ButtonCredits" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 200.0
margin_bottom = 280.0
rect_min_size = Vector2( 200, 40 )
text = "Credits"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 446.0
margin_right = 246.0
margin_bottom = 496.0
custom_constants/margin_bottom = 50

[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonNewCampaign" to="." method="_on_ButtonNewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonContinueCampaign" to="." method="_on_ButtonNewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonAbandonCampaign" to="." method="_on_ButtonAbandonCampaign_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
